Detach (Alt + D) doesn't work in nodes editor / compositor #37057

Closed
opened 2013-10-12 20:47:33 +02:00 by Arkadiusz Kasprzyk · 8 comments

%%%--- Operating System, Graphics card ---
Windows 7, 64bit / Asus GTX 560 OC DCII

- Blender version with error, and version that worked ---

2.69, 2.68a / in 2.68 it worked if I remember well

- Short description of error ---

Tool "Detach" doesn't work. Shortcut is fine.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

simply try detach node in compositor or node editor in 2.69 version of blender

%%%

%%%--- Operating System, Graphics card --- Windows 7, 64bit / Asus GTX 560 OC DCII - Blender version with error, and version that worked --- 2.69, 2.68a / in 2.68 it worked if I remember well - Short description of error --- Tool "Detach" doesn't work. Shortcut is fine. - Steps for others to reproduce the error (preferably based on attached .blend file) --- simply try detach node in compositor or node editor in 2.69 version of blender %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I cannot confirm this (OSX 2.69rc1 and trunk).
Can you attach a sample file where the problem happens?%%%

%%%I cannot confirm this (OSX 2.69rc1 and trunk). Can you attach a sample file where the problem happens?%%%

%%%http://www.pasteall.org/blend/24569
I don't think that this issue is in blend file.
I check again issue on latest build (blender-2.69-r60695-win64.zip) and it is still there.
I 've loaded factory settings and it still doesn't work.%%%

%%%http://www.pasteall.org/blend/24569 I don't think that this issue is in blend file. I check again issue on latest build (blender-2.69-r60695-win64.zip) and it is still there. I 've loaded factory settings and it still doesn't work.%%%

%%%*checked%%%

%%%*checked%%%
Member

%%%Comfirmed on Win7 64 bit - Alt+D simply grabs the node without disconnecting it, but only on certain nodes (in my case, doesn't work for shader or image, but does for Mapping node: https://dl.dropboxusercontent.com/u/23382946/altDbug.blend)
%%%

%%%Comfirmed on Win7 64 bit - Alt+D simply grabs the node without disconnecting it, but only on certain nodes (in my case, doesn't work for shader or image, but does for Mapping node: https://dl.dropboxusercontent.com/u/23382946/altDbug.blend) %%%

%%%Ok I found the issue. The thing is, there is no way to detach a node when the input and output don't match 1:1.
For example, if the Input is a green node and the output is an yellow node, Blender cannot connect both sides.

@Lukas-132, bug or design?

Also, if I delete the node and Ctrl+Z it segfaults. But that's a separate issue.%%%

%%%Ok I found the issue. The thing is, there is no way to detach a node when the input and output don't match 1:1. For example, if the Input is a green node and the output is an yellow node, Blender cannot connect both sides. @Lukas-132, bug or design? Also, if I delete the node and Ctrl+Z it segfaults. But that's a separate issue.%%%
Member

%%%Fixed in SVN.

The alt+D operator was trying to be smart and exited early if none of the sockets can be matched, but that prevented it from removing other links (i.e. detaching the node).

@dalai-1: Also fixed the crash on ctrl+z, this was a problem with the recent implementation of node group localization ...%%%

%%%Fixed in SVN. The alt+D operator was trying to be smart and exited early if none of the sockets can be matched, but that prevented it from removing other links (i.e. detaching the node). @dalai-1: Also fixed the crash on ctrl+z, this was a problem with the recent implementation of node group localization ...%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37057
No description provided.