Fix #37057, Detach (Alt + D) doesn't work in nodes editor / compositor. The operator exits early when there are no internal links. This prevents it from removing links which have no internal connection.